--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity
             android:name=".TutorialActivity"
-            android:label="@string/app_name" >
+            android:label="@string/title_activity_tutorial" >
         </activity>
     </application>
 
