--- a/TestPrototype/app/src/main/AndroidManifest.xml
+++ b/TestPrototype/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name"
@@ -29,6 +29,14 @@
         <activity
             android:name=".Maps"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".Register"
+            android:label="@string/title_activity_welcome_screen" >
+        </activity>
+        <activity
+            android:name=".Login"
+            android:label="@string/title_activity_login" >
         </activity>
     </application>
 
