--- a/BeaconsPrototype/app/build.gradle
+++ b/BeaconsPrototype/app/build.gradle
@@ -20,9 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.estimote:sdk:0.9.4@aar'
+    compile 'com.google.android.gms:play-services:8.3.0'
+    compile project(':SVG')
 }
